2011-08-03  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinDialog.c: [Bug 3314770] regression - Windows file
	dialogs not resizable

2011-07-28  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updates for 8.6b2 release.

2011-07-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* xlib/X11/Xutil.h: [Bug 3380684] XEmptyRegion prototype doesn't
	match usage

2011-07-19  Donal K. Fellows  <dkf@users.sf.net>

	* doc/*.3, doc/*.n: Many small fixes to documentation as part of
	project to improve quality of generated HTML docs.

2011-06-29  Don Porter  <dgp@users.sourceforge.net>

	* generic/ttk/ttkTrace.c: [Bug 3341056]: Correct segfault due to flaw
	* tests/ttk/ttk.test:	in the 2011-06-17 commit.

2011-06-19  Donal K. Fellows  <dkf@users.sf.net>

	* doc/wm.n: Added documentation of the -type attribute that was
	introduced in TIP#359, and moved documentation of -alpha to common
	section as it is supported on all platforms now.

2011-06-17  Don Porter  <dgp@users.sourceforge.net>

	* generic/ttk/ttkTrace.c:	Workaround Bug 3062331.
	* tests/ttk/ttk.test:
	* changes:	Updated

2011-06-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4: Sync with win/tcl.m4 from Tcl
	* win/configure: (regenerated)

2011-06-10  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkEntry.c:	[Bug 3315731] Fix [$entry -invcmd].

2011-06-10  Don Porter  <dgp@users.sourceforge.net>

	* README:	Correct some README bitrot.
	* macosx/README:

2011-06-07  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkEntry.c:	Restore support for values "08" and "09"
	in a [spinbox] configured to use -from and -to values.  [Bug 2358545].

2011-06-06  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkConsole.c:	Restore proper NUL output to the [console].
	* library/console.tcl: [Bug 2546087]

2011-04-22  Peter Spjuth  <peter.spjuth@gmail.com>

	* generic/tkCanvPoly.c: [Bug 3291543] There was a crash if dchars
	* tests/canvas.test:    removed all coordinates of a polygon.
